// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar-chart-widget-form Renders \`bar-chart-widget-form\` widget settings with custom props 1`] = `
<div
  class="layout column"
>
  <field-title-stub
    name="title"
    value="Bar chart"
  />
  <field-periodic-refresh-stub
    form="[object Object]"
  />
  <field-preset-stub
    name="preset"
    parameters="[object Object]"
    type="BarChart"
  />
  <widget-settings-group-stub
    title="Metrics display"
  >
    <field-alarm-metric-presets-stub
      onlygroup="true"
      value="[object Object]"
      withcolor="true"
      withexternal="true"
    />
    <field-bar-graph-type-stub
      name="stacked"
      value="true"
    />
  </widget-settings-group-stub>
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-title-stub
      label="Header"
      name="chart_title"
      placeholder="Header title"
      value="Chart title"
    />
    <field-quick-date-interval-type-stub
      ranges="[object Object]"
      value="last30Days"
    />
    <field-sampling-stub
      value="day"
    />
    <field-filters-stub
      addable="true"
      editable="true"
      filters="[object Object]"
      withentity="true"
    />
    <field-switcher-stub
      title="Show comparison"
    />
  </widget-settings-group-stub>
</div>
`;

exports[`bar-chart-widget-form Renders \`bar-chart-widget-form\` widget settings with default props 1`] = `
<v-layout-stub
  column=""
  tag="div"
>
  <field-title-stub
    name="title"
    value=""
  />
  <!---->
  <!---->
  <widget-settings-group-stub
    title="Metrics display"
  >
    <field-alarm-metric-presets-stub
      onlygroup="true"
      value=""
      withcolor="true"
      withexternal="true"
    />
    <field-bar-graph-type-stub
      name="stacked"
    />
  </widget-settings-group-stub>
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-title-stub
      label="Header"
      name="chart_title"
      placeholder="Header title"
      value=""
    />
    <field-quick-date-interval-type-stub
      ranges="[object Object]"
      value="last30Days"
    />
    <field-sampling-stub
      value="day"
    />
    <!---->
    <field-switcher-stub
      title="Show comparison"
    />
  </widget-settings-group-stub>
</v-layout-stub>
`;
